@@ -16,21 +16,14 @@ To build and test you need a file `src/main/resources/badwords.json` which is no
 Obtain the latest version of this from [gdrive](https://drive.google.com/drive/u/1/folders/1Olex5Io_B5y2OHye9DcgyfDI2GKZOwz8). The file is gitignored to is safe.
 
 ```sh
-# build jar
-mvn package
-
-# build docker image
-mvn install dockerfile:build
+make image
 ```
 
-In some dev environments (windows) you may need to use the provided `mvnw` script instead of `mvn`.
+Reusable workflow and CI/CD are not currently supported due to the management of the badwords.json list.
 
 ## Running
 
 ```sh
-# run jar
-java -jar fsa-reference-numbers-0.0.2-SNAPSHOT.jar
-
 # run dockerfile
 docker run -it -p 8080:8080 {{ Name of outputted docker image }}
 ```
@@ -39,17 +32,20 @@ docker run -it -p 8080:8080 {{ Name of outputted docker image }}
 
 The specification requires that no two services are running with the same instance number. If you are running more than one server you can set the instance number with
 ```sh
-# jar
-java -jar target/fsa-reference-numbers-0.0.2-SNAPSHOT.jar --fsa-rn.instance=(Instance number)
-
 #docker
-docker run -it -p 8080:8080 {{ docker image }} --fsa-rn.instance=(Instance number)
+docker run -it -p 8080:8080 {{ docker image }} sh -c "/run_app.sh --fsa-rn.instance={instance number}"
 ```
 
-## Instance number allocation
+### Instance number allocation
 
 | Usage | Instance number range |
 |---|---|
 | Epimorphics RN service | 0-9, currently 0, 1 in use |
 | Epimorphics UV service | 10-19, currently 10 in use |
 | FSA usage | 900 - 999 |
+
+## Changelog
+
+`0.0.8`  Updated for java 21, which requires use of `--add-opens`, see bin/run_app.sh
+
+`0.0.7`  Original version deploy to FSA cluster
